--- a/2. java-maven-sonarqube-argocd-k8s/spring-boot-app/Jenkinsfile
+++ b/2. java-maven-sonarqube-argocd-k8s/spring-boot-app/Jenkinsfile
@@ -1,10 +1,6 @@
 pipeline {
   agent {
-    docker {
-	image 'maven:3.8.1-adoptopenjdk/openjdk11'
-      //image 'abhishekf5/maven-abhishek-docker-agent:v1'
-      //args '--user root -v /var/run/docker.sock:/var/run/docker.sock' // mount Docker socket to access the host's Docker daemon
-    }
+    docker { dockerfile true }
   }
   stages {
     stage('Checkout') {
