--- a/2. java-maven-sonarqube-argocd-k8s/spring-boot-app/Dockerfile
+++ b/2. java-maven-sonarqube-argocd-k8s/spring-boot-app/Dockerfile
@@ -1,3 +1,13 @@
-RUN node:16-alpine
+# You can change this base image to anything else
+# But make sure to use the correct version of Java
+FROM adoptopenjdk/openjdk11:alpine-jre
 
-RUN apk add -U git curl
+# Simply the artifact path
+ARG artifact=target/spring-boot-web.jar
+
+WORKDIR /opt/app
+
+COPY ${artifact} app.jar
+
+# This should not be changed
+ENTRYPOINT ["java","-jar","app.jar"]
