--- a/2. java-maven-sonarqube-argocd-k8s/spring-boot-app/Jenkinsfile
+++ b/2. java-maven-sonarqube-argocd-k8s/spring-boot-app/Jenkinsfile
@@ -1,6 +1,9 @@
 pipeline {
   agent {
-    docker { dockerfile true }
+    docker {
+      image 'abhishekf5/maven-abhishek-docker-agent:v1'
+      args '--user root -v /var/run/docker.sock:/var/run/docker.sock' // mount Docker socket to access the host's Docker daemon
+    }
   }
   stages {
     stage('Checkout') {
@@ -63,4 +66,3 @@ pipeline {
     }
   }
 }
-
