--- a/2.java-maven-sonarqube-argocd-k8s/spring-boot-app-manifests/deployment.yml
+++ b/2.java-maven-sonarqube-argocd-k8s/spring-boot-app-manifests/deployment.yml
@@ -16,6 +16,6 @@ spec:
     spec:
       containers:
       - name: spring-boot-app
-        image: abhishekf5/ultimate-cicd:30
+        image: cisko6/ultimate-cicd:30
         ports:
         - containerPort: 8080
