--- a/2.java-maven-sonarqube-argocd-k8s/spring-boot-app/Jenkinsfile
+++ b/2.java-maven-sonarqube-argocd-k8s/spring-boot-app/Jenkinsfile
@@ -2,8 +2,7 @@ pipeline {
   agent {
     docker {
       image 'abhishekf5/maven-abhishek-docker-agent:v1'
-      args '--user root -v /var/run/docker.sock:/var/run/docker.sock' // mount Docker socket to access the host's Docker daemon
-      args '-p 9000:9000'
+      args '--user root -v /var/run/docker.sock:/var/run/docker.sock --network host' // mount Docker socket to access the host's Docker daemon
     }
   }
 
