--- a/2.java-maven-sonarqube-argocd-k8s/spring-boot-app/Jenkinsfile
+++ b/2.java-maven-sonarqube-argocd-k8s/spring-boot-app/Jenkinsfile
@@ -11,7 +11,8 @@ pipeline {
         steps {
             script {
                 container('your-docker-image') {
-                    sh 'curl http://localhost:9000'
+                    sh 'ifconfig'
+                    sh 'netstat -tuln'
                 }
             }
         }
