--- a/2.java-maven-sonarqube-argocd-k8s/spring-boot-app/Jenkinsfile
+++ b/2.java-maven-sonarqube-argocd-k8s/spring-boot-app/Jenkinsfile
@@ -1,10 +1,11 @@
 pipeline {
-  agent {
-    docker {
-      image 'abhishekf5/maven-abhishek-docker-agent:v1'
-      args '--user root -v /var/run/docker.sock:/var/run/docker.sock' // mount Docker socket to access the host's Docker daemon
-    }
-  }
+  agent any
+  //agent {	// ak by sme chceli docker agenta -> nema pristup v kontajneri na moj localhost tak to skipujem
+  //  docker {
+  //    image 'abhishekf5/maven-abhishek-docker-agent:v1'
+  //    args '--user root -v /var/run/docker.sock:/var/run/docker.sock' // mount Docker socket to access the host's Docker daemon
+  // }
+  //}
 
   stages {
     stage('Checkout') {
