--- a/2.java-maven-sonarqube-argocd-k8s/spring-boot-app/Jenkinsfile
+++ b/2.java-maven-sonarqube-argocd-k8s/spring-boot-app/Jenkinsfile
@@ -12,6 +12,7 @@ pipeline {
       steps {
         sh 'ls -ltr'
         // build the project and create a JAR file
+	sh 'mvn -version'
         sh 'cd 2.java-maven-sonarqube-argocd-k8s/spring-boot-app && mvn clean package'
       }
     }
